# abaqus-finledger-api

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/api/routes/: accounts.py  auth.py  customers.py  transactions.py
app/core/: config.py  entrypoint.py  security.py
app/db/: session.py
app/db/migrations/: env.py  script.py.mako
app/db/migrations/versions/: 32c33471743c_create_users_table.py  330a511dcdc8_create_customers.py  9e201cc7d1b7_create_transactions.py  e55738caa7e5_create_accounts.py
app/models/: __init__.py  account.py  customer.py  transaction.py  user.py
app/schemas/: account.py  customer.py  transaction.py  user.py
app/services/: seed.py  transaction.py
docker/: Dockerfile
tests/: conftest.py  test_accounts.py  test_accounts_get_by_id.py  test_auth.py  test_smoke_e2e.py  test_transactions.py
