[project]
name = "abaqus-finledger-api"
version = "0.1.0"
description = "FinLedger API - FastAPI + Postgres + Docker + Tests + AWS-friendly"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]==1.7.4",
  "bcrypt<4.0",
  "python-multipart>=0.0.9",
  "boto3>=1.34",
  "email-validator>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
  "ignore:'crypt' is deprecated.*:DeprecationWarning",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["docker*", "tests*"]